--- a/README.adoc
+++ b/README.adoc
@@ -1,57 +1,26 @@
-:hardbreaks:
-= 김준호
+= 김준호 이력서
 
-Java 백엔드 엔지니어
+https://github.com/sproogen/modern-resume-theme 기반으로 작성
 
-* email: junho85@gmail.com
-* github: https://github.com/junho85
-* linkedin: https://www.linkedin.com/in/junho85/
-* blog: https://junho85.pe.kr/
+----
+$ bundle install
+$ bundle exec jekyll serve
+----
 
+http://localhost:4000
 
 == 소개
 웹서비스 서버 개발자로 일하고 있는 김준호입니다. 하루에 수억건의 메일이 오고 가는 다음메일 서비스의 메일 수발신 서버를 개발/운영 했었습니다.
 현재는 My 구독 서비스 신규 개발에 참여 하여 서비스 론칭 후 서비스를 발전시켜 나가고 있습니다.
 
-== 경력
+* blog: https://junho85.pe.kr/
 
-=== 카카오 / 2012.1 ~ 현재
-.프로젝트
-* My 구독 서비스 (2020.04~현재)
-* 카카오메일 (2019)
-* 로그 수집 시스템 ()
-* EMS 대량 메일 발송 시스템 (2014)
-* 회원 가입/탈퇴 처리 시스템 ()
-* 스마트워크 (2013)
-* 사내 도서관 시스템 (2012)
+== TODO
+* 포트폴리오
+* linkedin에 적은 수상 경력들
+* 대외 활동. 정원사들
+* 토이프로젝트. 출석부
+* 카카오에서 연도별로 했는 일들 정리
 
-.유지보수/개선
-* 프리미엄메일
-* SMTP 서버
-* LMTP 서버
-* 인프라 마이그레이션
-* Java 버전 업 대응, OS 버전업 대응
-* 운영툴 개발
-
-=== Qualcomm CDMA Technologies Korea / 2011.7 ~ 2011.12
-* 멀티미디어팀 지원
-* C, JTAG, Android
-
-=== Graphics Lab / 2010.8 ~ 2011.6
-* 3D 모델링 툴 개발 지원
-* OpenGL, python
-
-=== Trek Technology Singapore / 2010.3 ~ 2010.8
-* Wifi SD Card, Wifi Camera 개발
-* Linux, JTAG, CGI, C, lighttpd
-
-=== 위니텍 / 2006.5 ~ 2009.5
-* 경북대학교 연구비지원시스템 개발
-* 사내 프로젝트 관리 시스템 개발
-* Oracle, Java, JBoss, Javascript, MiPlatform
-
-=== 영천호국원 / 2005.3 ~ 2005.8
-* 홈페이지 개발
-* PHP, MySQL, Flash
-
-== Skill
+== 참고
+* https://prezi.com/8t8foqr1iznq/20110603-sw/[2011.06.03 SW마에스트로 면접용 소개자료]
