--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,7 @@
 = 김준호 이력서
 
 https://github.com/sproogen/modern-resume-theme 기반으로 작성
+demo: https://sproogen.github.io/modern-resume-theme/
 
 ----
 $ bundle install
@@ -22,5 +23,10 @@ http://localhost:4000
 * 토이프로젝트. 출석부
 * 카카오에서 연도별로 했는 일들 정리
 
-== 참고
+== 정리
 * https://prezi.com/8t8foqr1iznq/20110603-sw/[2011.06.03 SW마에스트로 면접용 소개자료]
+* https://junho85.pe.kr/1431[오랜만에 써 본 이력서 2019.08.27]
+
+== 참고
+* https://blog.outsider.ne.kr/1234[Outsider 이력서 2016.08.11]
+* https://jojoldu.github.io[이동욱 이력서]
